; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/raid/extr_md_nvidia.c_g_raid_md_create_nvidia.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/raid/extr_md_nvidia.c_g_raid_md_create_nvidia.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.g_raid_md_object = type { %struct.g_raid_softc* }
%struct.g_raid_softc = type { %struct.g_geom* }
%struct.g_geom = type { i32 }
%struct.g_class = type { i32 }
%struct.g_raid_md_nvidia_object = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"NVIDIA-%d\00", align 1
@NVIDIANodeID = common dso_local global i32 0, align 4
@G_RAID_MD_TASTE_FAIL = common dso_local global i32 0, align 4
@G_RAID_MD_TASTE_NEW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.g_raid_md_object*, %struct.g_class*, %struct.g_geom**)* @g_raid_md_create_nvidia to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @g_raid_md_create_nvidia(%struct.g_raid_md_object* %0, %struct.g_class* %1, %struct.g_geom** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.g_raid_md_object*, align 8
  %6 = alloca %struct.g_class*, align 8
  %7 = alloca %struct.g_geom**, align 8
  %8 = alloca %struct.g_raid_softc*, align 8
  %9 = alloca %struct.g_raid_md_nvidia_object*, align 8
  %10 = alloca [32 x i8], align 16
  store %struct.g_raid_md_object* %0, %struct.g_raid_md_object** %5, align 8
  store %struct.g_class* %1, %struct.g_class** %6, align 8
  store %struct.g_geom** %2, %struct.g_geom*** %7, align 8
  %11 = load %struct.g_raid_md_object*, %struct.g_raid_md_object** %5, align 8
  %12 = bitcast %struct.g_raid_md_object* %11 to %struct.g_raid_md_nvidia_object*
  store %struct.g_raid_md_nvidia_object* %12, %struct.g_raid_md_nvidia_object** %9, align 8
  %13 = load %struct.g_raid_md_nvidia_object*, %struct.g_raid_md_nvidia_object** %9, align 8
  %14 = getelementptr inbounds %struct.g_raid_md_nvidia_object, %struct.g_raid_md_nvidia_object* %13, i32 0, i32 0
  %15 = call i32 @arc4rand(i32* %14, i32 16, i32 0)
  %16 = getelementptr inbounds [32 x i8], [32 x i8]* %10, i64 0, i64 0
  %17 = call i32 @atomic_fetchadd_int(i32* @NVIDIANodeID, i32 1)
  %18 = call i32 @snprintf(i8* %16, i32 32, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = load %struct.g_class*, %struct.g_class** %6, align 8
  %20 = getelementptr inbounds [32 x i8], [32 x i8]* %10, i64 0, i64 0
  %21 = load %struct.g_raid_md_object*, %struct.g_raid_md_object** %5, align 8
  %22 = call %struct.g_raid_softc* @g_raid_create_node(%struct.g_class* %19, i8* %20, %struct.g_raid_md_object* %21)
  store %struct.g_raid_softc* %22, %struct.g_raid_softc** %8, align 8
  %23 = load %struct.g_raid_softc*, %struct.g_raid_softc** %8, align 8
  %24 = icmp eq %struct.g_raid_softc* %23, null
  br i1 %24, label %25, label %27

25:                                               ; preds = %3
  %26 = load i32, i32* @G_RAID_MD_TASTE_FAIL, align 4
  store i32 %26, i32* %4, align 4
  br label %36

27:                                               ; preds = %3
  %28 = load %struct.g_raid_softc*, %struct.g_raid_softc** %8, align 8
  %29 = load %struct.g_raid_md_object*, %struct.g_raid_md_object** %5, align 8
  %30 = getelementptr inbounds %struct.g_raid_md_object, %struct.g_raid_md_object* %29, i32 0, i32 0
  store %struct.g_raid_softc* %28, %struct.g_raid_softc** %30, align 8
  %31 = load %struct.g_raid_softc*, %struct.g_raid_softc** %8, align 8
  %32 = getelementptr inbounds %struct.g_raid_softc, %struct.g_raid_softc* %31, i32 0, i32 0
  %33 = load %struct.g_geom*, %struct.g_geom** %32, align 8
  %34 = load %struct.g_geom**, %struct.g_geom*** %7, align 8
  store %struct.g_geom* %33, %struct.g_geom** %34, align 8
  %35 = load i32, i32* @G_RAID_MD_TASTE_NEW, align 4
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %27, %25
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @arc4rand(i32*, i32, i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @atomic_fetchadd_int(i32*, i32) #1

declare dso_local %struct.g_raid_softc* @g_raid_create_node(%struct.g_class*, i8*, %struct.g_raid_md_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
